Bug 507530 - File name containing certain characters is displayed incorrectly
Summary: File name containing certain characters is displayed incorrectly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Media Player widget (other bugs)
Version First Reported In: 6.4.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2025-07-27 00:23 UTC by Patrick Silva
Modified: 2025-10-04 15:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments
screen recording (2.32 MB, video/webm)
2025-07-27 00:27 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-07-27 00:23:43 UTC
STEPS TO REPRODUCE
1. have a video with any name below:
video (123).mp4
video [123].mp4
video {123}.mp4
2. play the video with a player usable with Media Player widget
3. click on the Media Player widget and observe the displayed file name

OBSERVED RESULT
the widget displays the file name incorrectly. Please watch the attached screen recording.

EXPECTED RESULT
correct file name

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
Qt Version: 6.9.1
Kernel Version: 6.15.7-061507-generic (64-bit)
Graphics Platform: Wayland
Comment 1 Patrick Silva 2025-07-27 00:27:35 UTC
Created attachment 183550 [details]
screen recording
Comment 2 TraceyC 2025-07-31 19:56:21 UTC
I can reproduce this on git-master with similarly named webm videos when played on VLC
Comment 3 Andreas B 2025-09-27 20:54:46 UTC
Can confirm that VLC produces this behavior.
Anyway, other players seem to work fine. Played .mp4 files with these names with Firefox and the names are displayed correct.
Comment 4 Andreas B 2025-09-29 10:21:46 UTC
I think it's not problem with the widget. VLC sends this directly as meta-data over the dbus (see below).
One could implement that the strings with URLEncoding are decoded properly, but it isn't necessarily a bug.

      dict entry(
         string "Metadata"
         variant             array [
               dict entry(
                  string "mpris:trackid"
                  variant                      object path "/org/videolan/vlc/playlist/3"
               )
               dict entry(
                  string "xesam:url"
                  variant                      string "file:///home/andreas/Music/audio%28123%29.mp4"
               )
               dict entry(
                  string "vlc:time"
                  variant                      uint32 3696
               )
               dict entry(
                  string "mpris:length"
                  variant                      int64 3696082721
               )
               dict entry(
                  string "vlc:length"
                  variant                      int64 3696082
               )
               dict entry(
                  string "vlc:publisher"
                  variant                      int32 5
               )
            ]
      )
Comment 5 TraceyC 2025-09-29 15:16:51 UTC
Setting this back to confirmed
Comment 6 Fushan Wen 2025-10-03 01:45:14 UTC
Git commit 20c37ef4cc3678755dde57c131d1a6cfeb44d370 by Fushan Wen, on behalf of Conor Smith.
Committed on 03/10/2025 at 01:45.
Pushed by fusionfuture into branch 'master'.

libkmpris: Decodes URI before displaying title

When a track provided by the MRPIS DBUS interface does not have a title
or album, the value at xesam:url will be used instead. Particularly for
files, this causes problems if said URL has URI encoded characters.
FIXED-IN: 6.5.0

M  +2    -2    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/20c37ef4cc3678755dde57c131d1a6cfeb44d370
Comment 7 Fushan Wen 2025-10-03 01:48:09 UTC
Git commit 46cb8ce861062b70bf95285a0ea8bb3f0d00fb60 by Fushan Wen.
Committed on 03/10/2025 at 01:45.
Pushed by fusionfuture into branch 'Plasma/6.5'.

libkmpris: Decodes URI before displaying title

When a track provided by the MRPIS DBUS interface does not have a title
or album, the value at xesam:url will be used instead. Particularly for
files, this causes problems if said URL has URI encoded characters.
FIXED-IN: 6.5.0


(cherry picked from commit 20c37ef4cc3678755dde57c131d1a6cfeb44d370)

c6e4aa77 libkmpris: Decodes URI before displaying title

Co-authored-by: Conor Smith <conormartindale@gmail.com>

M  +2    -2    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/46cb8ce861062b70bf95285a0ea8bb3f0d00fb60
Comment 8 Fushan Wen 2025-10-03 01:49:08 UTC
Git commit 6a0aac5becb8369f3e674f4d1ca0715f16964f89 by Fushan Wen.
Committed on 03/10/2025 at 01:48.
Pushed by fusionfuture into branch 'Plasma/6.4'.

libkmpris: Decodes URI before displaying title

When a track provided by the MRPIS DBUS interface does not have a title
or album, the value at xesam:url will be used instead. Particularly for
files, this causes problems if said URL has URI encoded characters.
FIXED-IN: 6.5.0


(cherry picked from commit 20c37ef4cc3678755dde57c131d1a6cfeb44d370)

c6e4aa77 libkmpris: Decodes URI before displaying title

Co-authored-by: Conor Smith <conormartindale@gmail.com>

(cherry picked from commit 46cb8ce861062b70bf95285a0ea8bb3f0d00fb60)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>

M  +2    -2    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/6a0aac5becb8369f3e674f4d1ca0715f16964f89