libkmpris: Decodes URI before displaying title

When a track provided by the MRPIS DBUS interface does not have a title
or album, the value at xesam:url will be used instead. Particularly for
files, this causes problems if said URL has URI encoded characters.

BUG: 507530
FIXED-IN: 6.5.0